Fix scrollbar not working

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,12 @@
 .App {
     font-family: Arial, Helvetica, sans-serif;
     overflow: auto;
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
+}
+
+.App::-webkit-scrollbar-button: {
+  display: none;
 }
 
 .App-light{
@@ -37,6 +41,11 @@
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
+
+.deck-list{
+  margin-bottom: 20px;
+}
+
 .deck-title {
   margin-top: 0px;
   font-size: 18px;
